--- a/sandbox/dynamic_array.ipynb
+++ b/sandbox/dynamic_array.ipynb
@@ -9,16 +9,17 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import sys\n",
-    "sys.path.append('..')"
+    "\n",
+    "sys.path.append(\"..\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.dynamic_array import DynamicArray"
+    "from src.data_structures.dynamic_array import DynamicArray"
    ]
   },
   {
